--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
-    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/05eaefea44.js" crossorigin="anonymous"></script>
     
     <title>WhiteRock Financial</title>
@@ -15,8 +15,7 @@
     <nav id="navbar">
         <h1 class="logo">
             <span class="text-primary">
-                <i class="fas fa-sharp fa-solid fa-globe"></i> White
-            </span>Rock
+                <i class="fas fa-sharp fa-solid fa-globe"></i> White</span>Rock
         </h1>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -106,19 +105,19 @@
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" name="name" id="name" placeholder="Please enter your name">
+                    <input type="text" name="name" id="name" placeholder="Enter your name">
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Please enter your email">
+                    <input type="email" name="email" id="email" placeholder="Enter your email">
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone Number</label>
-                    <input type="text" name="phone" id="phone" placeholder="Please enter your phone number">
+                    <input type="text" name="phone" id="phone" placeholder="Enter your phone number">
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea  name="message" id="message" placeholder="Please enter a message for us"></textarea>
+                    <textarea  name="message" id="message" placeholder="Enter a message for us"></textarea>
                 </div>
                 <input type="submit" value="Send" class="btn btn-dark">
             </form>
